Remove admin link from main timeline page

--- a/site/index.html.tmpl
+++ b/site/index.html.tmpl
@@ -108,7 +108,7 @@
   <div class="wrap">
     <div class="panel">
       <h1>METAR Availability Timeline</h1>
-      <p>Hourly checkpoints stacked by monitored station. <a href="admin.html">Admin</a></p>
+      <p>Hourly checkpoints stacked by monitored station.</p>
 
       <div class="controls">
         <input id="limit" type="number" min="24" max="240" value="72" />
